--- a/Views/Account/AccessDenied.cshtml
+++ b/Views/Account/AccessDenied.cshtml
@@ -11,11 +11,11 @@
     <meta name="viewport" content="text/html" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <title>Доступ запрещен</title>
+    <title>@localizer["strAccessDenied"]</title>
 </head>
 <body>
-    <h2>У Вас недостаточно прав доступа!</h2>
-    <h2>Обратитесь к администратору.</h2>
+    <h2>@localizer["strNotEnoughRights"]</h2>
+    <h2>@localizer["strWriteAdmin"]</h2>
 
     <div class="img403">
         <img src="/image/accessDenied.jpg" alt="Picture">
