--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -7,30 +7,29 @@
 @inject IViewLocalizer localizer;
 
 
-    <form action="get">
-        <button class="btn-danger" type="submit" asp-action="Logout" asp-controller="Account">Выйти</button>
-    </form>
+<form action="get">
+    <button class="btn-danger" type="submit" asp-action="Logout" asp-controller="Account">@localizer["strSubmitLogout"]</button>
+</form>
 
-    <h2>Страница входа на сайт</h2>
+<h2>@localizer["strHeaderLogin"]</h2>
 
-    <a asp-action="Register" asp-controller="Account">Регистрация</a>
-    <form asp-action="Login" asp-controller="Account" method="post" asp-antiforgery="true
+<a asp-action="Register" asp-controller="Account">@localizer["strRegistration"]</a>
+<form asp-action="Login" asp-controller="Account" method="post" asp-antiforgery="true
           ">
-        <div class="validation" asp-validation-summary="ModelOnly"></div>
-        <div>
-            <div class="form-group">
-                <label asp-for="Email">Введите Ваш E-mail</label>
-                <input type="text" asp-for="Email" />
-                <span asp-validation-for="Email"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password">Введите Ваш пароль</label>
-                <input type="password" asp-for="Password" />
-                <span asp-validation-for="Password"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Войти" class="btn btn-outline-dark" />
-            </div>
+    <div class="validation" asp-validation-summary="ModelOnly"></div>
+    <div>
+        <div class="form-group">
+            <label asp-for="Email">@localizer["strLoginEmail"]</label>
+            <input type="text" asp-for="Email" />
+            <span asp-validation-for="Email"></span>
         </div>
-    </form>
-    
+        <div class="form-group">
+            <label asp-for="Password">@localizer["strLoginPassword"]</label>
+            <input type="password" asp-for="Password" />
+            <span asp-validation-for="Password"></span>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="@localizer["strSubmitLogin"]" class="btn btn-outline-dark" />
+        </div>
+    </div>
+</form>
