--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@Model IEnumerable<Regulations.Models.Regulation>
+﻿@model IEnumerable<Regulations.Models.Regulation>
     @{
         ViewData["Title"] = localizer["strHeader"];
         Layout = "_Layout";
@@ -6,29 +6,27 @@
     @using Microsoft.AspNetCore.Mvc.Localization;
     @inject IViewLocalizer localizer;
 
-    <h3>@localizer["strTitle"]</h3>
-    <table>
+    <h3 class="text-black-50">@localizer["strTitle"]</h3>
+    <table class="table table-hover table-responsive">
         <tr>
             <td>
                 <form action="get">
-                    <button class="btn-danger" type="submit" asp-action="Logout" asp-controller="Account">@localizer["strLogOut"]</button>
+                    <button id="Logout" class="btn btn-block btn-outline-danger" type="submit" asp-action="Logout" asp-controller="Account">@localizer["strLogOut"]</button>
                 </form>
             </td>
-
         </tr>
         <tr>
-            <td>@localizer["strName"]</td>
-            <td>@localizer["strDate"]</td>
+            <th>@localizer["strName"]</th>
+            <th>@localizer["strDate"]</th>
         </tr>
         @foreach (var reg in Model)
         {
             <tr>
                 <td>@reg.ShortName</td>
                 <td>@reg.Added</td>
-                <td><a href="@reg.Link">@localizer["strLink"]</a></td>
-                <td><a asp-action="UpdateRegulation" asp-controller="Regulations" asp-route-id="@reg.Id">@localizer["strChangeReg"]</a></td>
-                <td><a asp-action="DeleteRegulation" asp-controller="Regulations" asp-route-id="@reg.Id">@localizer["strDelete"]</a></td>
-                <td></td>
+                <td><a href="@reg.Link" role="button" class="btn btn-block btn-link">@localizer["strLink"]</a></td>
+                <td><a asp-action="UpdateRegulation" asp-controller="Regulations" asp-route-id="@reg.Id" role="button" class="btn btn-block btn-secondary" >@localizer["strChangeReg"]</a></td>
+                <td><a asp-action="DeleteRegulation" asp-controller="Regulations" asp-route-id="@reg.Id" role="button" class="btn btn-block btn-danger">@localizer["strDelete"]</a></td>
             </tr>
         }
         <tr>
@@ -36,6 +34,6 @@
             <td></td>
             <td></td>
             <td></td>
-            <td><a href="~/Regulations/AddRegulation/" name="AddRegLink" type="text/html">@localizer["strAddReg"]</a></td>
+            <td><a href="~/Regulations/AddRegulation/" name="AddRegLink" type="text/html" role="button" class="btn btn-block btn-success">@localizer["strAddReg"]</a></td>
         </tr>
     </table>
