--- a/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/Views/Shared/_SelectLanguagePartial.cshtml
@@ -18,7 +18,8 @@
 <form asp-controller="Home" asp-action="SetLanguage"
       asp-route-returnUrl="@Context.Request.Path"
       method="post" class="form-horizontal">
-    Language: <select name="culture" onchange="this.form.submit();"
+    Language: <select  name="culture" onchange="this.form.submit();"
                       asp-for="@requestCulture.RequestCulture.UICulture.Name"
-                      asp-items="cultureItems"></select>
+                      asp-items="cultureItems"
+                      class="custom-select text-body" ></select>
 </form>
