--- a/Views/Account/AccessDenied.cshtml
+++ b/Views/Account/AccessDenied.cshtml
@@ -18,7 +18,7 @@
     <h2>@localizer["strWriteAdmin"]</h2>
 
     <div class="img403">
-        <img src="/image/accessDenied.jpg" alt="Picture">
+        <img src="/image/accessDenied.jpg" alt="Picture" class="rounded mx-auto d-block">
     </div>
     
 </body>
