--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization;
 @inject IViewLocalizer localizer;
 
-    <h2>@localizer["strHeaderRegister"]</h2>
+    <h2 class="text-black-50">@localizer["strHeaderRegister"]</h2>
 
 
     <form asp-action="Register" asp-controller="Account" method="post" asp-antiforgery="true">
@@ -28,7 +28,7 @@
                 <span asp-validation-for="ConfirmPassword"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="@localizer["strSubmitRegistration"]" class="btn btn-outline-dark" />
+                <input type="submit" value="@localizer["strSubmitRegistration"]" class="btn btn-outline-primary" />
             </div>
         </div>
     </form>
