--- a/Views/Regulations/UpdateRegulation.cshtml
+++ b/Views/Regulations/UpdateRegulation.cshtml
@@ -12,29 +12,28 @@
         <input type="hidden" asp-for="Id" value="@Model.Id" />
         <input type="hidden" asp-for="Added" value="@DateTime.Now" />
         <input type="hidden" asp-for="User.Email" value="@User.Identity.Name" />
-
-        <table>
-            <tr>
-                <td>@localizer["Edit_ShortName"]</td>
-                <td><input type="text" asp-for="ShortName" value="@Model.ShortName" /></td>
-                <td><span asp-validation-for="ShortName"></span></td>
-            </tr>
-            <tr>
-                <td>@localizer["Edit_FullName"]</td>
-                <td><input type="text" asp-for="FullName" value="@Model.FullName" /></td>
-                <td><span asp-validation-for="FullName"></span></td>
-            </tr>
-            <tr>
-                <td>@localizer["Edit_Link"]</td>
-                <td><input type="text" asp-for="Link" value="@Model.Link" /></td>
-                <td><span asp-validation-for="Link"></span></td>
-            </tr>
-            <tr>
-                <td>@localizer["Edit_UserId"]</td>
-                <td><input type="number" asp-for="UserId" value="" /></td>
-                <td><span asp-validation-for="UserId"></span></td>
-            </tr>
-            <tr><td><input type="submit" value=@localizer["Edit_Submit"] /></td><td></td></tr>
-        </table>
+        <div class="form-group">
+            <label>@localizer["Edit_ShortName"]</label>
+            <input type="text" asp-for="ShortName" value="@Model.ShortName" />
+            <span asp-validation-for="ShortName"></span>
+        </div>
+        <div class="form-group">
+            <label>@localizer["Edit_FullName"]</label>
+            <input type="text" asp-for="FullName" value="@Model.FullName" />
+            <span asp-validation-for="FullName"></span>
+        </div>
+        <div class="form-group">
+            <label>@localizer["Edit_Link"]</label>
+            <input type="text" asp-for="Link" value="@Model.Link" />
+            <span asp-validation-for="Link"></span>
+        </div>
+        <div class="form-group">
+            <label>@localizer["Edit_UserId"]</label>
+            <input type="number" asp-for="UserId" value="" />
+            <span asp-validation-for="UserId"></span>
+        </div>
+        <div>
+            <input type="submit" value=@localizer["Edit_Submit"] class="btn btn-primary"/>
+        </div>
     </form>
 </div>
