--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -6,30 +6,37 @@
 @using Microsoft.AspNetCore.Mvc.Localization;
 @inject IViewLocalizer localizer;
 
+<div>
     <h2 class="text-black-50">@localizer["strHeaderRegister"]</h2>
 
-
-    <form asp-action="Register" asp-controller="Account" method="post" asp-antiforgery="true">
+    <table class="table table-hover">
+        <form asp-action="Register" asp-controller="Account" method="post" asp-antiforgery="true">
         <div class="validation" asp-validation-summary="ModelOnly"></div>
         <div>
-            <div class="form-group">
-                <label asp-for="Email">@localizer["strRegisterEmail"]</label>
-                <input type="email" asp-for="Email" />
-                <span asp-validation-for="Email"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password">@localizer["strRegisterPassword"]</label>
-                <input type="password" asp-for="Password" />
-                <span asp-validation-for="Password"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword">@localizer["strConfirmRegisterPassword"]</label>
-                <input type="password" asp-for="ConfirmPassword" />
-                <span asp-validation-for="ConfirmPassword"></span>
-            </div>
-            <div class="form-group">
+            <tr class="form-group">
+                <td><label asp-for="Email">@localizer["strRegisterEmail"]</label></td>
+                <td><input type="email" asp-for="Email" class="form-control"/></td>
+                <td><span asp-validation-for="Email"></span></td>
+                
+            </tr>
+            <tr class="form-group">
+                <td><label asp-for="Password">@localizer["strRegisterPassword"]</label></td>
+                <td><input type="password" asp-for="Password" class="form-control"/></td>
+                <td><span asp-validation-for="Password"></span></td>
+                
+            </tr>
+            <tr class="form-group">
+                <td><label asp-for="ConfirmPassword">@localizer["strConfirmRegisterPassword"]</label></td>
+                <td><input type="password" asp-for="ConfirmPassword" class="form-control"/></td>
+                <td><span asp-validation-for="ConfirmPassword"></span></td>                
+            </tr>
+            <tr class="form-group">
                 <input type="submit" value="@localizer["strSubmitRegistration"]" class="btn btn-outline-primary" />
-            </div>
+            </tr>
         </div>
     </form>
+    </table>
+</div>
+    
+    
    
