--- a/Views/Regulations/AddRegulation.cshtml
+++ b/Views/Regulations/AddRegulation.cshtml
@@ -12,42 +12,45 @@
 @inject IViewLocalizer localizer;
 
 
-<div>
-    <span>@User.Identity.Name</span>
-    <h3>@localizer["Add_Header"]</h3>
-    <form asp-action="AddRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
-        <input type="hidden" asp-for="Id" value="@Model.Id" />
-        <input type="hidden" asp-for="Added" value="@DateTime.Now" />
-        <input type="hidden" asp-for="User.Email" value="@User.Identity.Name" />
+<div>    
+    <h3 class="text-black-50">@localizer["Add_Header"]</h3>
+    <table class="table table-hover table-responsive table-borderless">
+        
+        <form asp-action="AddRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
+            <td><input type="hidden" asp-for="Id" value="@Model.Id" /></td>  
+            <td><input type="hidden" asp-for="Added" value="@DateTime.Now" /></td>  
+            <td><input type="hidden" asp-for="User.Email" value="@User.Identity.Name" /></td>  
 
+            <tr class="form-group">                
+                   <td><label>@localizer["Add_ShortName"]</label></td>
+                    <td><input type="text" asp-for="ShortName" value="@Model.ShortName" class="form-control" /></td>
+                    <td><span asp-validation-for="ShortName"></span></td>                
+            </tr>
+            <tr class="form-group">                
+                   <td><label>@localizer["Add_ShortName"]</label></td>
+                    <td><input type="text" asp-for="ShortName" value="@Model.ShortName" class="form-control" /></td>
+                    <td><span asp-validation-for="ShortName" ></span></td>                
+            </tr>
+            <tr class="form-group">
+                   <td><label>@localizer["Add_FullName"]</label></td>
+                    <td><input type="text" asp-for="FullName" value="@Model.FullName" class="form-control" /></td>
+                    <td><span asp-validation-for="FullName"></span></td>
+            </tr>
+            <tr class="form-group">
+                   <td><label>@localizer["Add_Link"]</label></td>
+                    <td><input type="text" asp-for="Link" value="@Model.Link" class="form-control" /></td>
+                    <td><span asp-validation-for="Link"></span></td>
+            </tr>
+            <tr class="form-group">
+                   <td><label>@localizer["Add_UserId"]</label></td>
+                    <td><input type="number" asp-for="UserId" class="form-control" /></td>
+                    <td><span asp-validation-for="UserId" value=""></span></td>
+            </tr>
+            <tr class="form-group">
+                
+                <input type="submit" value=@localizer["Add_Submit"] class="btn btn-primary" />
+            </tr>            
+        </form>
+    </table>
 
-        <div class="form-group">
-            <label>@localizer["Add_ShortName"]</label>
-            <input type="text" asp-for="ShortName" value="@Model.ShortName" />
-            <span asp-validation-for="ShortName"></span>
-        </div>
-        <div class="form-group">
-            <label>@localizer["Add_ShortName"]</label>
-            <input type="text" asp-for="ShortName" value="@Model.ShortName" />
-            <span asp-validation-for="ShortName"></span>
-        </div>
-        <div class="form-group">
-            <label>@localizer["Add_FullName"]</label>
-            <input type="text" asp-for="FullName" value="@Model.FullName" />
-            <span asp-validation-for="FullName"></span>
-        </div>
-        <div class="form-group">
-            <label>@localizer["Add_Link"]</label>
-            <input type="text" asp-for="Link" value="@Model.Link" />
-            <span asp-validation-for="Link"></span>
-        </div>
-        <div class="form-group">
-            <label>@localizer["Add_UserId"]</label>
-            <input type="number" asp-for="UserId" />
-            <span asp-validation-for="UserId" value=""></span>
-        </div>
-        <div>
-            <input type="submit" value=@localizer["Add_Submit"] class="btn btn-primary" />
-        </div>
-    </form>
 </div>
