--- a/Views/Regulations/UpdateRegulation.cshtml
+++ b/Views/Regulations/UpdateRegulation.cshtml
@@ -6,34 +6,39 @@
 @using Microsoft.AspNetCore.Mvc.Localization;
 @inject IViewLocalizer localizer;
 
-<div>
-    <h3>@localizer["Edit_Header"]</h3>
+
+<h3 class="text-black-50">@localizer["Edit_Header"]</h3>
+<table class="table table-hover table-responsive table-borderless">
     <form asp-action="UpdateRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
         <input type="hidden" asp-for="Id" value="@Model.Id" />
         <input type="hidden" asp-for="Added" value="@DateTime.Now" />
         <input type="hidden" asp-for="User.Email" value="@User.Identity.Name" />
-        <div class="form-group">
-            <label>@localizer["Edit_ShortName"]</label>
-            <input type="text" asp-for="ShortName" value="@Model.ShortName" />
-            <span asp-validation-for="ShortName"></span>
-        </div>
-        <div class="form-group">
-            <label>@localizer["Edit_FullName"]</label>
-            <input type="text" asp-for="FullName" value="@Model.FullName" />
-            <span asp-validation-for="FullName"></span>
-        </div>
-        <div class="form-group">
-            <label>@localizer["Edit_Link"]</label>
-            <input type="text" asp-for="Link" value="@Model.Link" />
-            <span asp-validation-for="Link"></span>
-        </div>
-        <div class="form-group">
-            <label>@localizer["Edit_UserId"]</label>
-            <input type="number" asp-for="UserId" value="" />
-            <span asp-validation-for="UserId"></span>
-        </div>
-        <div>
-            <input type="submit" value=@localizer["Edit_Submit"] class="btn btn-primary"/>
+        <tr class="form-group">
+            <td><label>@localizer["Edit_ShortName"]</label></td>
+            <td><input type="text" asp-for="ShortName" value="@Model.ShortName" class="form-control" /></td>
+            <td><span asp-validation-for="ShortName" class="text-md-center"></span></td>
+        </tr>
+        <tr>
+            <td><label>@localizer["Edit_FullName"]</label></td>
+            <td><input type="text" asp-for="FullName" value="@Model.FullName" class="form-control" /></td>
+            <td><span asp-validation-for="FullName" class="text-md-center"></span></td>
+        </tr>
+        <tr>
+            <td><label>@localizer["Edit_Link"]</label></td>
+            <td><input type="text" asp-for="Link" value="@Model.Link" class="form-control" /></td>
+            <td><span asp-validation-for="Link" class="text-md-center"></span></td>
+        </tr>
+        <tr>
+            <td><label>@localizer["Edit_UserId"]</label></td>
+            <td><input type="number" asp-for="UserId" value="" class="form-control" /></td>
+            <td><span asp-validation-for="UserId" class="text-md-center"></span></td>
+        </tr>
+        <div class="align-items-center">
+            <input type="submit" value=@localizer["Edit_Submit"] class="btn btn-primary" />
         </div>
     </form>
+</table>
+
+<div>
 </div>
+</tr>
