Add containers to Add and Edit regulation views

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,6 +6,9 @@
     @using Microsoft.AspNetCore.Mvc.Localization;
     @inject IViewLocalizer localizer;
 
+    <div class="container-fluid">
+        
+    </div>   
     <h3 class="text-black-50">@localizer["strTitle"]</h3>
     <table class="table table-hover table-responsive">
         <tr>
