--- a/Views/Regulations/AddRegulation.cshtml
+++ b/Views/Regulations/AddRegulation.cshtml
@@ -12,45 +12,64 @@
 @inject IViewLocalizer localizer;
 
 
-<div>    
-    <h3 class="text-black-50">@localizer["Add_Header"]</h3>
-    <table class="table table-hover table-responsive table-borderless">
-        
-        <form asp-action="AddRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
-            <td><input type="hidden" asp-for="Id" value="@Model.Id" /></td>  
-            <td><input type="hidden" asp-for="Added" value="@DateTime.Now" /></td>  
-            <td><input type="hidden" asp-for="User.Email" value="@User.Identity.Name" /></td>  
+<div class="container">
 
-            <tr class="form-group">                
-                   <td><label>@localizer["Add_ShortName"]</label></td>
-                    <td><input type="text" asp-for="ShortName" value="@Model.ShortName" class="form-control" /></td>
-                    <td><span asp-validation-for="ShortName"></span></td>                
-            </tr>
-            <tr class="form-group">                
-                   <td><label>@localizer["Add_ShortName"]</label></td>
-                    <td><input type="text" asp-for="ShortName" value="@Model.ShortName" class="form-control" /></td>
-                    <td><span asp-validation-for="ShortName" ></span></td>                
-            </tr>
-            <tr class="form-group">
-                   <td><label>@localizer["Add_FullName"]</label></td>
-                    <td><input type="text" asp-for="FullName" value="@Model.FullName" class="form-control" /></td>
+    <div class="row justify-content-center">
+        <h3 class="text-center text-black-50">@localizer["Add_Header"]</h3>
+    </div>
+    <div id="NavDiv" class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/JRW_kinki-R.svg/480px-JRW_kinki-R.svg.png"
+                width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+            RegulationsApp
+        </a>
+        <a class="nav-link" asp-action="Index" asp-controller="Home">Home</a>
+        <a class="nav-link" href="https://github.com/vaberezin">GitHub</a>
+        <a class="nav-link" href="https://career.habr.com/berezfox/print.pdf">CV-pdf</a>
+        <a class="nav-link" href="https://career.habr.com/berezfox">Career.Habr-profile</a>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-md-10 justify-content-center">
+            <table class="table table-hover table-responsive table-borderless">
+
+            <form asp-action="AddRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
+                <td><input type="hidden" asp-for="Id" value="@Model.Id" /></td>
+                <td><input type="hidden" asp-for="Added" value="@DateTime.Now" /></td>
+                <td><input type="hidden" asp-for="User.Email" value="@User.Identity.Name" /></td>
+
+                <tr class="form-group">
+                    <td><label>@localizer["Add_ShortName"]</label></td>
+                    <td><input width="700" type="text" asp-for="ShortName" value="@Model.ShortName" class="form-control" /></td>
+                    <td><span asp-validation-for="ShortName"></span></td>
+                </tr>
+                <tr class="form-group">
+                    <td><label>@localizer["Add_ShortName"]</label></td>
+                    <td><input width="700" type="text" asp-for="ShortName" value="@Model.ShortName" class="form-control" /></td>
+                    <td><span asp-validation-for="ShortName"></span></td>
+                </tr>
+                <tr class="form-group">
+                    <td><label>@localizer["Add_FullName"]</label></td>
+                    <td><input width="700" type="text" asp-for="FullName" value="@Model.FullName" class="form-control" /></td>
                     <td><span asp-validation-for="FullName"></span></td>
-            </tr>
-            <tr class="form-group">
-                   <td><label>@localizer["Add_Link"]</label></td>
-                    <td><input type="text" asp-for="Link" value="@Model.Link" class="form-control" /></td>
+                </tr>
+                <tr class="form-group">
+                    <td><label>@localizer["Add_Link"]</label></td>
+                    <td><input width="700" type="text" asp-for="Link" value="@Model.Link" class="form-control" /></td>
                     <td><span asp-validation-for="Link"></span></td>
-            </tr>
-            <tr class="form-group">
-                   <td><label>@localizer["Add_UserId"]</label></td>
-                    <td><input type="number" asp-for="UserId" class="form-control" /></td>
+                </tr>
+                <tr class="form-group">
+                    <td><label>@localizer["Add_UserId"]</label></td>
+                    <td><input width="700" type="number" asp-for="UserId" class="form-control" /></td>
                     <td><span asp-validation-for="UserId" value=""></span></td>
-            </tr>
-            <tr class="form-group">
-                
-                <input type="submit" value=@localizer["Add_Submit"] class="btn btn-primary" />
-            </tr>            
-        </form>
-    </table>
-
+                </tr>
+                <tr class="form-group">
+                    <td></td>
+                    <td></td>
+                    <td><input type="submit" value=@localizer["Add_Submit"] class="btn btn-primary" /></td>                    
+                </tr>
+            </form>
+        </table>
+        </div>
+        
+    </div>
 </div>
