--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -101,3 +101,11 @@ input[type="checkbox"].input-validation-error {
   border: 3px solid;
   border-color: #9a09ee;
 }
+
+.addform{
+  justify-self: center;
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  align-self: center;
+}
