--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,15 +1,26 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <title>@ViewData["Title"] - Regulations</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Regulations</title>
+    @* favicongenerator.net *@
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="180x180" href="~/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="~/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="~/favicons/favicon-16x16.png">
+    <link rel="manifest" href="~/favicons/site.webmanifest">
+    <link rel="mask-icon" href="~/favicons/safari-pinned-tab.svg" color="#5bbad5">    
+    @* favicongenerator.net *@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 </head>
+
 <body>
     <div class="container body-content">
         <div>
@@ -25,4 +36,5 @@
     </footer>
     @RenderSection("Scripts", required: false)
 </body>
+
 </html>
