--- a/Views/Regulations/AddRegulation.cshtml
+++ b/Views/Regulations/AddRegulation.cshtml
@@ -1,9 +1,6 @@
 ﻿@model Regulations.Models.Regulation
 @using Microsoft.AspNetCore.Mvc
 @using Microsoft.AspNetCore.Authorization
-{
-
-}
 @{
     ViewData["Title"] = localizer["Add_Header"];
     Layout = "_ValidationRegLayout";
@@ -31,45 +28,47 @@
     <div class="row justify-content-center">
         <div class="col-md-10 justify-content-center">
             <table class="table table-hover table-responsive table-borderless">
+                <form asp-action="AddRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
+                    <td><input type="hidden" asp-for="Id" value="@Model.Id" /></td>
+                    <td><input type="hidden" asp-for="Added" value="@DateTime.Now" /></td>
+                    <td><input type="hidden" asp-for="User.Email" value="@User.Identity.Name" /></td>
 
-            <form asp-action="AddRegulation" asp-controller="Regulations" asp-antiforgery="true" method="post">
-                <td><input type="hidden" asp-for="Id" value="@Model.Id" /></td>
-                <td><input type="hidden" asp-for="Added" value="@DateTime.Now" /></td>
-                <td><input type="hidden" asp-for="User.Email" value="@User.Identity.Name" /></td>
-
-                <tr class="form-group">
-                    <td><label>@localizer["Add_ShortName"]</label></td>
-                    <td><input width="700" type="text" asp-for="ShortName" value="@Model.ShortName" class="form-control" /></td>
-                    <td><span asp-validation-for="ShortName"></span></td>
-                </tr>
-                <tr class="form-group">
-                    <td><label>@localizer["Add_ShortName"]</label></td>
-                    <td><input width="700" type="text" asp-for="ShortName" value="@Model.ShortName" class="form-control" /></td>
-                    <td><span asp-validation-for="ShortName"></span></td>
-                </tr>
-                <tr class="form-group">
-                    <td><label>@localizer["Add_FullName"]</label></td>
-                    <td><input width="700" type="text" asp-for="FullName" value="@Model.FullName" class="form-control" /></td>
-                    <td><span asp-validation-for="FullName"></span></td>
-                </tr>
-                <tr class="form-group">
-                    <td><label>@localizer["Add_Link"]</label></td>
-                    <td><input width="700" type="text" asp-for="Link" value="@Model.Link" class="form-control" /></td>
-                    <td><span asp-validation-for="Link"></span></td>
-                </tr>
-                <tr class="form-group">
-                    <td><label>@localizer["Add_UserId"]</label></td>
-                    <td><input width="700" type="number" asp-for="UserId" class="form-control" /></td>
-                    <td><span asp-validation-for="UserId" value=""></span></td>
-                </tr>
-                <tr class="form-group">
-                    <td></td>
-                    <td></td>
-                    <td><input type="submit" value=@localizer["Add_Submit"] class="btn btn-primary" /></td>                    
-                </tr>
-            </form>
-        </table>
+                    <tr class="form-group">
+                        <td><label>@localizer["Add_ShortName"]</label></td>
+                        <td><input width="700" type="text" asp-for="ShortName" value="@Model.ShortName"
+                                class="form-control" /></td>
+                        <td><span asp-validation-for="ShortName"></span></td>
+                    </tr>
+                    <tr class="form-group">
+                        <td><label>@localizer["Add_ShortName"]</label></td>
+                        <td><input width="700" type="text" asp-for="ShortName" value="@Model.ShortName"
+                                class="form-control" /></td>
+                        <td><span asp-validation-for="ShortName"></span></td>
+                    </tr>
+                    <tr class="form-group">
+                        <td><label>@localizer["Add_FullName"]</label></td>
+                        <td><input width="700" type="text" asp-for="FullName" value="@Model.FullName"
+                                class="form-control" /></td>
+                        <td><span asp-validation-for="FullName"></span></td>
+                    </tr>
+                    <tr class="form-group">
+                        <td><label>@localizer["Add_Link"]</label></td>
+                        <td><input width="700" type="text" asp-for="Link" value="@Model.Link" class="form-control" />
+                        </td>
+                        <td><span asp-validation-for="Link"></span></td>
+                    </tr>
+                    <tr class="form-group">
+                        <td><label>@localizer["Add_UserId"]</label></td>
+                        <td><input width="700" type="number" asp-for="UserId" class="form-control" /></td>
+                        <td><span asp-validation-for="UserId" value=""></span></td>
+                    </tr>
+                    <tr class="form-group">
+                        <td></td>
+                        <td></td>
+                        <td><input type="submit" value=@localizer["Add_Submit"] class="btn btn-primary" /></td>
+                    </tr>
+                </form>
+            </table>
         </div>
-        
     </div>
 </div>
