Working on AccessDenied view

--- a/Views/Account/AccessDenied.cshtml
+++ b/Views/Account/AccessDenied.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{    
+﻿@{
     Layout = null;
 }
 @using Microsoft.AspNetCore.Mvc.Localization;
@@ -7,20 +6,28 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
     <meta name="viewport" content="text/html" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <title>@localizer["strAccessDenied"]</title>
 </head>
+
 <body>
-    <h2>@localizer["strNotEnoughRights"]</h2>
-    <h2>@localizer["strWriteAdmin"]</h2>
-
-    <div class="img403">
-        <img src="/image/accessDenied.jpg" alt="Picture" class="rounded mx-auto d-block">
+    <div class="container">
+        <div class="row justify-content-center d-block">
+            <div class="col-10">
+                <p><h2 >@localizer["strNotEnoughRights"]</h2></p>
+                <p><h2 >@localizer["strWriteAdmin"]</h2></p>   
+            </div> 
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-10">
+                <img  src="/image/accessDenied.jpg" alt="Picture" class="img403 rounded ">
+            </div>
+        </div>
     </div>
-    
 </body>
-</html>
 
+</html>
