--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -4,39 +4,79 @@
     Layout = "_ValidationRegLayout";
 }
 @using Microsoft.AspNetCore.Mvc.Localization;
+@using Microsoft.AspNetCore.Authentication;
+@using Microsoft.AspNetCore.Http;
+@using Microsoft.AspNetCore.Authentication.Cookies;
 @inject IViewLocalizer localizer;
 
-<h2 class="text-black-50">@localizer["strHeaderLogin"]</h2>
-<div>
-    <form action="get">
-        <button class="btn btn-outline-danger" type="submit" asp-action="Logout"
-            asp-controller="Account">@localizer["strSubmitLogout"]</button>
-    </form>
-    <a asp-action="Register" asp-controller="Account" role="button"
-        class="btn btn-outline-secondary">@localizer["strRegistration"]</a>
+
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-2"></div>
+        <div class="col-8">
+            <h2 class="text-black-50">@localizer["strHeaderLogin"]</h2>
+        </div>
+        <div class="col-2 flex-column">
+            <p>Вы вошли как: @User.Identity.Name </p>
+            <form action="get">
+                <button class="btn btn-outline-danger" type="submit" asp-action="Logout"
+                    asp-controller="Account">@localizer["strSubmitLogout"]
+                </button>
+            </form>
+            <form action="get">
+                <button class="btn btn-outline-secondary" type="submit" asp-action="Register"
+                asp-controller="Account">@localizer["strRegistration"]
+                </button>
+            </form>
+            
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+            <div id="NavDiv" class="navbar navbar-light bg-light">
+                <a class="navbar-brand" href="#">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/JRW_kinki-R.svg/480px-JRW_kinki-R.svg.png"
+                        width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+                    RegulationsApp
+                </a>
+                <a class="nav-link" asp-action="Index" asp-controller="Home">Home</a>
+                <a class="nav-link" href="https://github.com/vaberezin">GitHub</a>
+                <a class="nav-link" href="https://career.habr.com/berezfox/print.pdf">CV-pdf</a>
+                <a class="nav-link" href="https://career.habr.com/berezfox">Career.Habr-profile</a>
+            </div>
+        </div>
+        <div class="col-1">
+            
+        </div>
+    </div>
+
+
+
+    <div class="row justify-content-center">
+        <div class="col-md-10 justify-content-center">
+            <table class="table table-hover table-responsive table-borderless">
+                <form asp-action="Login" asp-controller="Account" method="post" asp-antiforgery="true">
+                    <tr class="form-group">
+                        <td><label asp-for="Email">@localizer["strLoginEmail"]</label></td>
+                        <td><input type="text" asp-for="Email" class="form-control" /></td>
+                        <td><span asp-validation-for="Email"></span></td>
+                    </tr>
+                    <tr class="form-group">
+                        <td><label asp-for="Password">@localizer["strLoginPassword"]</label></td>
+                        <td><input type="password" asp-for="Password" class="form-control" /></td>
+                        <td><span asp-validation-for="Password"></span></td>
+                    </tr>
+                    <tr class="form-group">
+                        <td>
+                            <input class="btn btn-outline-primary" type="submit" value="@localizer["strSubmitLogin"]" />
+                        </td>
+                    </tr>
+                </form>
+            </table>
+        </div>
+    </div>
 </div>
-<div class=".float-left">
-    <table class="table table-hover">
-
-        <form asp-action="Login" asp-controller="Account" method="post" asp-antiforgery="true">
-            <tr class="form-group">
-                <td><label asp-for="Email">@localizer["strLoginEmail"]</label></td>
-                <td><input type="text" asp-for="Email" class="form-control" /></td>
-                <td><span asp-validation-for="Email"></span></td>
-            </tr>
-            <tr class="form-group">
-                <td><label asp-for="Password">@localizer["strLoginPassword"]</label></td>
-                <td><input type="password" asp-for="Password" class="form-control" /></td>
-                <td><span asp-validation-for="Password"></span></td>
-            </tr>
-            <tr class="form-group">
-                <td>
-                    <input class="btn btn-outline-primary" type="submit" value="@localizer["strSubmitLogin"]" />
-                </td>
-
-            </tr>
-        </form>
 
 
-    </table>
-</div>
+@* -------------------------------!!!!!!!!!!!!!!!!!!!!!!!!!------------------------ *@
