npm + webpack works. minification need.

--- a/Views/Shared/_ValidationRegLayout.cshtml
+++ b/Views/Shared/_ValidationRegLayout.cshtml
@@ -13,6 +13,7 @@
     <link rel="manifest" href="~/favicons/site.webmanifest">
     <link rel="mask-icon" href="~/favicons/safari-pinned-tab.svg" color="#5bbad5">    
     @* favicongenerator.net *@    
+    @*
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
@@ -24,6 +25,8 @@
             asp-fallback-src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"
             asp-fallback-test="window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive">
     </script>
+    *@ 
+    <script src="~/bundle.js"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />   
     
