--- a/Views/Shared/1.cshtml
+++ b/Views/Shared/1.cshtml
@@ -1,4 +1,6 @@
-﻿<script src="~/lib/jquery/dist/jquery.min.js"></script>
+﻿@* validationScriptsPartial*@
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
